--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ramda": "^0.29.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "reactflow": "^11.10.2",
     "tailwind-merge": "^2.2.0"
   },
